--- a/css/style.css
+++ b/css/style.css
@@ -349,16 +349,20 @@ header {
 .burger__menu ul li a {
   font-size: 20px;
 }
-.burger__menu .burger_search__form {
+.burger__menu .burger__menu__search {
+  display: none;
   position: relative;
+  padding: 5px 10px;
+  border: 1px solid #000;
 }
-.burger__menu .burger_search__form .search__window {
-  width: 100%;
-}
-.burger__menu .burger__sersh_submit {
+.burger__menu .burger__menu__sersh_submit {
+  position: absolute;
+  right: 10px;
+  top: calc(50% - 8px);
+  display: inline-block;
   width: 16px;
   height: 16px;
-  background: url("../img/search.svg") 50% 50%/100% no-repeat;
+  background: url("../img/search.svg") 50% 50%/100% no-repeat, #fff;
 }
 
 .main_header__navigation {
@@ -1479,6 +1483,14 @@ header {
   .main_header__search {
     top: -7px;
   }
+
+  .main_slider .slick-arrow.slick-prev {
+    right: calc(50% - 340px);
+  }
+
+  .main_slider .slick-arrow.slick-next {
+    right: calc(50% - 395px);
+  }
 }
 @media (max-width: 800px) {
   .about_app__row {
@@ -1507,8 +1519,50 @@ header {
   .about_app__info {
     width: 70%;
   }
+
+  .main_header__search .search__window:focus {
+    width: 170px;
+  }
+  .main_header__search:hover {
+    width: 170px;
+  }
+  .main_header__search:hover .search__window {
+    width: 170px;
+  }
+  .main_header__search:focus {
+    width: 170px;
+  }
+  .main_header__search:focus .search__window {
+    width: 170px;
+  }
 }
 @media (max-width: 700px) {
+  .main_header__button {
+    background-color: #cc005e;
+    line-height: 70px;
+    padding: 0 20px 0 38px;
+    font-weight: bold;
+    font-size: 0px;
+    color: #fff;
+    position: relative;
+    transition-duration: 400ms;
+  }
+  .main_header__button:before {
+    content: "";
+    position: absolute;
+    display: inline-block;
+    top: calc(50% - 22.5px);
+    left: calc(50% - 22.5px);
+    height: 45px;
+    width: 45px;
+    background: url("../img/download.svg") 50% 50%/60% no-repeat, #130947;
+    border: 7px solid #ffffff;
+    border-radius: 50%;
+  }
+  .main_header__button:hover {
+    background-color: #ad0050;
+  }
+
   .main_screen {
     transform: translateY(-18%);
   }
@@ -1599,6 +1653,16 @@ header {
   }
 }
 @media (max-width: 500px) {
+  .burger__menu ul li:last-child {
+    margin-bottom: 20px;
+  }
+  .burger__menu .burger__menu__search {
+    display: block;
+  }
+  .main_header__search {
+    display: none;
+  }
+
   .social_link_1_item {
     margin-right: 10px;
   }
@@ -1669,6 +1733,21 @@ header {
     left: -70px;
     width: 210px;
     height: 210px;
+  }
+  .video_container .play:hover {
+    cursor: pointer;
+  }
+  .video_container .play:hover:before {
+    top: -45px;
+    left: -45px;
+    width: 160px;
+    height: 160px;
+  }
+  .video_container .play:hover:after {
+    top: -47.5px;
+    left: -47.5px;
+    width: 165px;
+    height: 165px;
   }
 
   .comment {
