--- a/#scorse/scss/style.scss
+++ b/#scorse/scss/style.scss
@@ -1,433 +1,13 @@
 @import "./nullstyle.scss";
-
+@import "./header.scss";
+@import "./footer.scss";
+@import "./try.scss";
 /*подключение шрифтов*/
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
   font-family: Montserrat;
-}
-
-header {
-  padding: 22px 0;
-}
-.container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0 10px;
-}
-
-.services__row {
-  position: relative;
-  margin: 0 0 17px 0;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  z-index: 1;
-}
-
-.social_link_1_row {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  height: 100%;
-  height: 18px;
-}
-
-.social_link_1_item {
-  margin-right: 20px;
-  display: flex;
-  justify-content: center;
-  height: 18px;
-  width: 18px;
-  a {
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-  }
-  &:last-child {
-    margin-right: 0;
-  }
-}
-
-.social_link_1_appstore {
-  background: url("../img/appstor.svg") 50% 50% / contain no-repeat;
-  &:hover {
-    background: url("../img/appstor-hover.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.social_link_1_playmarket {
-  background: url("../img/playmarket.svg") 50% 50% / contain no-repeat;
-  &:hover {
-    background: url("../img/playmarket-hover.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.social_link_1_twitter {
-  background: url("../img/twitter.svg") 50% 50% / contain no-repeat;
-  &:hover {
-    background: url("../img/twitter-hover.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.social_link_1_facebook {
-  background: url("../img/facebook.svg") 50% 50% / contain no-repeat;
-  &:hover {
-    background: url("../img/facebook-hover.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.services_futures__row {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 20px;
-  a {
-    color: #fff;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 20px;
-    &:hover {
-      color: #cc005e;
-    }
-  }
-  color: #fff;
-}
-
-.leng__link {
-  margin: 0 20px 0 0;
-}
-
-.select_lang {
-  position: relative;
-  margin: 0 35px 0 0;
-  .lang_arrow._active {
-    transform: rotateX(180deg);
-  }
-  a {
-    text-transform: uppercase;
-    &:hover {
-      color: #cc005e;
-    }
-  }
-  & > li {
-    span {
-      width: 0;
-      height: 0;
-      border-top: 7px solid #fff;
-      border-right: 7px solid transparent;
-      border-left: 7px solid transparent;
-      position: absolute;
-      top: calc(50% - 3.5px);
-      margin-left: 5px;
-    }
-  }
-}
-
-.lang_sub {
-  position: absolute;
-  left: -33px;
-  padding-top: 5px;
-  display: none;
-  &._open {
-    display: -webkit-flex;
-    display: -ms-flex;
-    display: flex;
-    li {
-      margin-right: 10px;
-    }
-  }
-}
-
-.services__mail {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  align-items: center;
-  span {
-    margin-right: 5px;
-  }
-  &:before {
-    content: "";
-    margin-right: 10px;
-    display: inline-block;
-    width: 20px;
-    height: 20px;
-    background: url("../img/mail.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.registration {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  align-items: center;
-  margin: 0 0 0 35px;
-  position: relative;
-  &:before {
-    content: "";
-    padding: 20px;
-    border-radius: 50%;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    background: url("../img/user.svg") 50% 50% / 60% no-repeat, #fff;
-  }
-
-  li {
-    padding: 0 10px;
-    &:last-child {
-      border-left: 2px solid #fff;
-    }
-  }
-}
-
-.main_header__row {
-  position: relative;
-  top: 0;
-  z-index: 4;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #fff;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.05);
-  border-radius: 10px;
-  overflow: hidden;
-}
-
-.main_header__item {
-  height: 100%;
-  &:nth-child(1) {
-    padding: 20px 0 20px 30px;
-  }
-  &:nth-child(2) {
-    flex-grow: 1;
-    position: relative;
-  }
-}
-
-.burger__menu {
-  display: none;
-  padding: 15px;
-  position: absolute;
-  left: 10px;
-  top: 20px;
-  width: calc(100% - 21px);
-  height: auto;
-  z-index: 3;
-  background: #fff;
-  transition-duration: 500ms;
-  transform: scaleY(0);
-  &._active {
-    transform: scaleY(1);
-    top: 142px;
-  }
-  ul {
-    text-align: left;
-    li {
-      margin-bottom: 20px;
-      &:last-child {
-        margin-bottom: 0;
-      }
-      a {
-        font-size: 20px;
-      }
-    }
-  }
-  .burger__menu__search {
-    display: none;
-    position: relative;
-    padding: 5px 10px;
-    border: 1px solid #000;
-  }
-
-  .search__window {
-  }
-
-  .burger__menu__sersh_submit {
-    position: absolute;
-    right: 10px;
-    top: calc(50% - 8px);
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background: url("../img/search.svg") 50% 50% / 100% no-repeat, #fff;
-  }
-}
-
-.main_header__navigation {
-  font-weight: 600;
-  font-size: 14px;
-  line-height: 17px;
-  color: #130947;
-}
-
-.main_header__menu {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 75px 0 0;
-  position: relative;
-  transition-duration: 500ms;
-  li {
-    margin-left: 25px;
-    &:first-child {
-      margin-left: 0;
-    }
-  }
-  a {
-    &:hover {
-      color: #cc005e;
-    }
-  }
-}
-
-.menu__icon {
-  display: none;
-  z-index: 6;
-  position: absolute;
-  left: 40px;
-  top: -13px;
-  //transform: translate(-30px, 50px);
-  width: 30px;
-  height: 24px;
-  cursor: pointer;
-  span,
-  &::before,
-  &::after {
-    left: 0;
-    position: absolute;
-    height: 10%;
-    width: 100%;
-    transition: all 0.3s ease 0s;
-    background-color: #cc005e;
-  }
-  &::before,
-  &::after {
-    content: "";
-  }
-  &::before {
-    top: 0;
-  }
-  &::after {
-    bottom: 0;
-  }
-  span {
-    top: 40%;
-    transform: scale(1) translate(0, 50%);
-  }
-  &._active {
-    span {
-      transform: scale(0) translate(0, 50%);
-    }
-    &::before {
-      top: 50%;
-      transform: rotate(-45deg) translate(0, -50%);
-    }
-    &::after {
-      bottom: 50%;
-      transform: rotate(45deg) translate(0, 50%);
-    }
-  }
-}
-
-.main_header__item {
-  transition-duration: 500ms;
-}
-
-.main_header__search {
-  position: absolute;
-  top: 0;
-  right: 35px;
-  transition-duration: 500ms;
-  border-left: 1px solid #bbbbbb;
-
-  &:after {
-    content: "";
-    position: absolute;
-    top: 0px;
-    right: 0;
-    display: inline-block;
-    height: 100%;
-    width: 20px;
-  }
-  .search__window {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    transition-duration: 500ms;
-    width: 0px;
-
-    padding-left: 10px;
-
-    border-left: 1px solid #bbbbbb;
-    &:focus {
-      width: 250px;
-      padding-left: 10px;
-    }
-  }
-
-  &:hover {
-    width: 244px;
-
-    .search__window {
-      width: 250px;
-      padding-left: 10px;
-    }
-  }
-  &:focus {
-    width: 244px;
-
-    .search__window {
-      width: 250px;
-      padding-left: 10px;
-    }
-  }
-  .main_header__sersh_submit {
-    position: absolute;
-    right: 0;
-    top: 0;
-    display: inline-block;
-    width: 16px;
-    height: 16px;
-    background: url("../img/search.svg") 50% 50% / 100% no-repeat, #fff;
-  }
-}
-
-.main_header__button {
-  background-color: #cc005e;
-  line-height: 70px;
-  padding: 0 20px 0 38px;
-  font-weight: bold;
-  font-size: 16px;
-  color: #fff;
-  position: relative;
-  transition-duration: 400ms;
-  &:before {
-    content: "";
-    position: absolute;
-    display: inline-block;
-    top: calc(50% - 22.5px);
-    left: -22.5px;
-    height: 45px;
-    width: 45px;
-    background: url("../img/download.svg") 50% 50% / 60% no-repeat, #130947;
-    border: 7px solid #ffffff;
-    border-radius: 50%;
-  }
-  &:hover {
-    background-color: #ad0050;
-  }
 }
 
 .main_slider {
@@ -1143,274 +723,6 @@ header {
   color: #130947;
 }
 
-.try {
-  padding: 90px 0 90px 50px;
-  background: url("../img/people.webp") 50% 50% / cover no-repeat;
-  max-width: 1100px;
-  margin: 0 auto 62px;
-}
-
-.try__title {
-  margin: 0 0 18px;
-  font-weight: bold;
-  font-size: 35px;
-  line-height: 43px;
-  color: #ffffff;
-}
-
-.try__text {
-  margin-bottom: 34px;
-  max-width: 550px;
-  font-size: 16px;
-  line-height: 20px;
-  color: #ffffff;
-}
-
-.try__appstore {
-  margin-right: 20px;
-  display: inline-block;
-  width: 160px;
-  height: 45px;
-  background: #fff;
-  border-radius: 3px;
-  padding: 0 10px 0 50px;
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 45px;
-  color: #cc005e;
-  text-transform: uppercase;
-  position: relative;
-  transition-duration: 500ms;
-  &:before {
-    content: "";
-    position: absolute;
-    top: calc(50% - 15px);
-    left: 10px;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: url("../img/appstor.svg") 50% 50% / 60% no-repeat, #cc005e;
-  }
-  &:last-child {
-    margin-right: 0;
-  }
-  &:hover {
-    color: #fff;
-    background: #cc005e;
-  }
-}
-
-.try__playmarket {
-  display: inline-block;
-  width: 160px;
-  height: 45px;
-  background: #fff;
-  border-radius: 3px;
-  padding: 0 10px 0 50px;
-  font-weight: 800;
-  font-size: 14px;
-  line-height: 45px;
-  color: #cc005e;
-  text-transform: uppercase;
-  position: relative;
-  &:before {
-    content: "";
-    position: absolute;
-    top: calc(50% - 15px);
-    left: 10px;
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    background: url("../img/playmarket.svg") 65% 50% / 60% no-repeat, #cc005e;
-  }
-  &:hover {
-    color: #fff;
-    background: #cc005e;
-  }
-}
-
-.footer {
-  width: 100%;
-  background: #171717;
-  color: #fff;
-}
-
-.footer_contact__row {
-  padding: 60px 0 40px;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-bottom: 2px solid #66667e;
-  .phone {
-    &:before {
-      content: "";
-      position: absolute;
-      display: inline-block;
-      width: 20px;
-      height: 16px;
-      top: -20px;
-      left: calc(50% - 10px);
-      background: url("../img/cellphone.svg") 50% 50% / contain no-repeat;
-    }
-  }
-  .email {
-    &:before {
-      content: "";
-      position: absolute;
-      display: inline-block;
-      width: 20px;
-      height: 16px;
-      top: -20px;
-      left: calc(50% - 10px);
-      background: url("../img/mail.svg") 0 0 / contain no-repeat;
-    }
-  }
-  .massege {
-    &:before {
-      content: "";
-      position: absolute;
-      display: inline-block;
-      width: 20px;
-      height: 16px;
-      top: -20px;
-      left: calc(50% - 10px);
-      background: url("../img/massege.svg") 0 0 / contain no-repeat;
-    }
-  }
-  .footer_contact__item {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 17px;
-    color: #8d8c8c;
-    position: relative;
-  }
-}
-
-.footer__row {
-  padding: 30px 0 40px;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  justify-content: space-between;
-  p {
-    max-width: 270px;
-    font-weight: 300;
-    font-size: 14px;
-    line-height: 17px;
-    color: #8d8c8c;
-  }
-  h4 {
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 17px;
-    color: #ffffff;
-    margin: 0 0 30px;
-  }
-  a {
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 15px;
-    color: #8d8c8c;
-    &:hover {
-      text-decoration: underline;
-    }
-  }
-  ul {
-    &:last-child {
-      margin-bottom: 15px;
-    }
-  }
-}
-
-.footer__item {
-  li {
-    font-weight: 300;
-    font-size: 12px;
-    line-height: 15px;
-    color: #8d8c8c;
-    margin-bottom: 10px;
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.footer_logo {
-  margin: 0 0 60px;
-  display: inline-block;
-}
-
-.footer__phone_1 {
-  display: flex;
-  align-items: center;
-
-  &:before {
-    content: "";
-    margin: 0 7px 0 0;
-    display: inline-block;
-    width: 20px;
-    height: 16px;
-    background: url("../img/cellphone.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.footer_adres {
-  display: flex;
-  align-items: center;
-
-  &:before {
-    content: "";
-    margin: 0 7px 0 0;
-    display: inline-block;
-    width: 20px;
-    height: 28px;
-    background: url("../img/location.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.footer__email_1 {
-  display: flex;
-  align-items: center;
-
-  &:before {
-    content: "";
-    margin: 0 7px 0 0;
-    display: inline-block;
-    width: 20px;
-    height: 16px;
-    background: url("../img/mail.svg") 50% 50% / contain no-repeat;
-  }
-}
-
-.connect {
-  ul {
-    margin-bottom: 15px;
-  }
-}
-
-.footer__approw {
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-}
-
-.footer__appitem {
-  margin-right: 10px;
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.footer__appstore {
-}
-
-.footer__playmarket {
-}
-
 @media (max-width: 1250px) {
   .benefits_slider .slick-arrow.slick-prev {
     left: 15px;
@@ -1421,9 +733,6 @@ header {
 }
 
 @media (max-width: 1056px) {
-  .main_header__menu li {
-    margin-left: 15px;
-  }
   .main_slider .slick-arrow.slick-prev {
     right: calc(50% - 400px);
   }
@@ -1433,18 +742,6 @@ header {
 }
 
 @media (max-width: 1000px) {
-  .menu__icon {
-    display: block;
-  }
-  .main_header__navigation {
-    display: none;
-  }
-  .burger__menu {
-    display: block;
-  }
-  .main_header__search {
-    top: -7px;
-  }
   .main_slider .slick-arrow.slick-prev {
     right: calc(50% - 340px);
   }
@@ -1474,28 +771,6 @@ header {
   }
   .about_app__info {
     width: 70%;
-  }
-  .main_header__search {
-    .search__window {
-      &:focus {
-        width: 170px;
-      }
-    }
-
-    &:hover {
-      width: 170px;
-
-      .search__window {
-        width: 170px;
-      }
-    }
-    &:focus {
-      width: 170px;
-
-      .search__window {
-        width: 170px;
-      }
-    }
   }
 }
 
